--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
 				<ul id="navigation">
 					<li class="selected">
-						<a href="index.html">Main Page</a>
+						<a href="index.html">Main Page--Version2</a>
 					</li>
 					<li class="menu">
 						<a href="about.html">About</a>
